<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true"
    android:layout_weight="0.5"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#bfbfbf"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="#990000"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            android:text="@string/type"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_weight="1.0"
        android:layout_height="match_parent"
        android:id="@+id/txt_content"
        android:textColorHint="#000000"
        android:hint="@string/hello_world"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_conn"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/connect"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPrintBill"
            android:text="@string/printBill"
            android:layout_marginRight="2dp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/printMultilingual"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:layout_marginRight="2dp"
            android:text="@string/multilingual"
            android:layout_weight="1"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/printRasterImage"
            android:text="Gallery Image"
            android:layout_marginLeft="2dp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSend"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:text="@string/printText"
            android:layout_marginRight="2dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCODE39"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:layout_marginLeft="2dp"
            android:text="@string/printBarcode"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Print Qr Code"
            android:background="@drawable/button"
            android:layout_marginRight="2dp"
            android:textColor="#ffffff"
            android:id="@+id/rasterQr"/>
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Print Image"
            android:background="@drawable/button"
            android:layout_marginLeft="2dp"
            android:textColor="#ffffff"
            android:id="@+id/rasterImage" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="4dp"
        android:textColor="#ffffff"
        android:text="@string/disconnect"
        android:id="@+id/btnClose"/>
</LinearLayout>
    </ScrollView>